force-app/main/default/objects/Case/fields/Assign_To__c.field-meta.xml
<CustomField>
    <fullName>Assign_To__c</fullName>
    <label>Assign To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CFG</fullName>
                <default>true</default>
                <label>CFG</label>
            </value>
            <value>
                <fullName>Scotia Bank</fullName>
            </value>
            <value>
                <fullName>SPL</fullName>
            </value>
            <value>
                <fullName>SDA</fullName>
            </value>
            <value>
                <fullName>Canaccede</fullName>
            </value>
            <value>
                <fullName>Fairstone</fullName>
            </value>
            <value>
                <fullName>Goeasy</fullName>
                <label>Easyfinancial</label>
            </value>
            <value>
                <fullName>Canadian Tire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>