force-app/main/default/objects/Case/fields/CCS_Account__c.field-meta.xml
<CustomField>
    <fullName>CCS_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CCS Account</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Product__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CCS_Account</value>
        </filterItems>
        <filterItems>
            <field>Product__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>GoEasy_CCS_Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignment</relationshipName>
    <type>Lookup</type>
</CustomField>