force-app/main/default/objects/Case/fields/CCS_Assignment_Type__c.field-meta.xml
<CustomField>
    <fullName>CCS_Assignment_Type__c</fullName>
    <label>CCS Assignment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Balance Updates</fullName>
            </value>
            <value>
                <fullName>DMP</fullName>
            </value>
            <value>
                <fullName>Drop Notification</fullName>
            </value>
            <value>
                <fullName>PIF request</fullName>
            </value>
            <value>
                <fullName>Payout Request</fullName>
            </value>
            <value>
                <fullName>Settlement Offer</fullName>
            </value>
            <value>
                <fullName>Needs Documentation</fullName>
            </value>
            <value>
                <fullName>Secured Communications</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>