force-app/main/default/objects/Case/fields/External_Correlation_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Correlation_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>External Correlation ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>