force-app/main/default/objects/Case/fields/Form_Types__c.field-meta.xml
<CustomField>
    <fullName>Form_Types__c</fullName>
    <description>To differentiate between emails(Assignments)</description>
    <inlineHelpText>To differentiate between emails(Assignments)</inlineHelpText>
    <label>Form Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Balance Updates</fullName>
            </value>
            <value>
                <fullName>Bulk Response</fullName>
            </value>
            <value>
                <fullName>Chq Stub</fullName>
            </value>
            <value>
                <fullName>Creditor Package</fullName>
            </value>
            <value>
                <fullName>Deficiency / Rejected POC</fullName>
            </value>
            <value>
                <fullName>DMP</fullName>
            </value>
            <value>
                <fullName>Drop Notification</fullName>
            </value>
            <value>
                <fullName>Fidem</fullName>
            </value>
            <value>
                <fullName>Final</fullName>
            </value>
            <value>
                <fullName>Form 149 – Notice to Prove Claim</fullName>
            </value>
            <value>
                <fullName>Form 15 – Deemed Discharge of Trustee</fullName>
            </value>
            <value>
                <fullName>Form 16 – Certificate of Compliance</fullName>
            </value>
            <value>
                <fullName>Form 33 – Notice of Intention</fullName>
            </value>
            <value>
                <fullName>Form 40.1 - Notice of Hearing</fullName>
            </value>
            <value>
                <fullName>Form 49 – Amendment</fullName>
            </value>
            <value>
                <fullName>Form 50 - Meeting Of Creditors</fullName>
            </value>
            <value>
                <fullName>Form 52 – Notice of Status</fullName>
            </value>
            <value>
                <fullName>Form 56 – Notice of annulment</fullName>
            </value>
            <value>
                <fullName>Form 69 – Impending Automatic Discharge</fullName>
            </value>
            <value>
                <fullName>Form 71 – Notice of First Meeting</fullName>
            </value>
            <value>
                <fullName>Form 76 – Notice of Proof of Security</fullName>
            </value>
            <value>
                <fullName>Form 77 – Notice of Disallowance</fullName>
            </value>
            <value>
                <fullName>Form 80 – Notice of Intended opposition to discharge.</fullName>
            </value>
            <value>
                <fullName>Form 81 &amp; 82– Application for Discharge</fullName>
            </value>
            <value>
                <fullName>Form 92 – Notice of Proposal</fullName>
            </value>
            <value>
                <fullName>Form 93 &amp; 96 – Revival</fullName>
            </value>
            <value>
                <fullName>French Document</fullName>
            </value>
            <value>
                <fullName>Inspector File</fullName>
            </value>
            <value>
                <fullName>Interim</fullName>
            </value>
            <value>
                <fullName>LendCare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>