force-app/main/default/objects/Case/fields/Insolvency_Assignment_Type__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Assignment_Type__c</fullName>
    <description>Insolvency Assignment Type</description>
    <inlineHelpText>Insolvency Assignment Type</inlineHelpText>
    <label>Insolvency Assignment Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Assign_To__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Validation</fullName>
            </value>
            <value>
                <fullName>Amend Claim</fullName>
            </value>
            <value>
                <fullName>Business Insolvency</fullName>
            </value>
            <value>
                <fullName>Chq Stub</fullName>
            </value>
            <value>
                <fullName>Distressed Sale</fullName>
            </value>
            <value>
                <fullName>Letter of Release Request</fullName>
            </value>
            <value>
                <fullName>More Information Required</fullName>
            </value>
            <value>
                <fullName>Needs Documentation</fullName>
            </value>
            <value>
                <fullName>Notice of Disallowance</fullName>
            </value>
            <value>
                <fullName>Query</fullName>
            </value>
            <value>
                <fullName>Refund Request</fullName>
            </value>
            <value>
                <fullName>Secured Communications</fullName>
            </value>
            <value>
                <fullName>Vehicle Pickup Request</fullName>
            </value>
            <value>
                <fullName>Withdraw PoC</fullName>
            </value>
            <value>
                <fullName>Final</fullName>
            </value>
            <value>
                <fullName>OSB Request</fullName>
            </value>
            <value>
                <fullName>Fax Confirmation Report</fullName>
            </value>
            <value>
                <fullName>Balance Updates</fullName>
            </value>
            <value>
                <fullName>DMP</fullName>
            </value>
            <value>
                <fullName>Drop Notification</fullName>
            </value>
            <value>
                <fullName>PIF request</fullName>
            </value>
            <value>
                <fullName>Payout Request</fullName>
            </value>
            <value>
                <fullName>Settlement Offer</fullName>
            </value>
            <value>
                <fullName>Forward Request</fullName>
                <isActive>false</isActive>
                <label>Forward Request</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>