force-app/main/default/objects/Case/recordTypes/Canaccede_EmailToCase.recordType-meta.xml
<RecordType>
    <fullName>Canaccede_EmailToCase</fullName>
    <active>true</active>
    <businessProcess>Email to Case Process</businessProcess>
    <description>Canaccede Email To Case record Type</description>
    <label>Canaccede EmailToCase</label>
</RecordType>