force-app/main/default/objects/Case/recordTypes/CCS_Case.recordType-meta.xml
<RecordType>
    <fullName>CCS_Case</fullName>
    <active>true</active>
    <businessProcess>CCS Cases Process</businessProcess>
    <label>CCS Case</label>
</RecordType>