force-app/main/default/objects/Case/recordTypes/CCS_Dividend.recordType-meta.xml
<RecordType>
    <fullName>CCS_Dividend</fullName>
    <active>true</active>
    <businessProcess>Remittance</businessProcess>
    <label>CCS Dividend</label>
</RecordType>