force-app/main/default/objects/Case/recordTypes/EmailToCase.recordType-meta.xml
<RecordType>
    <fullName>EmailToCase</fullName>
    <active>true</active>
    <businessProcess>Email to Case Process</businessProcess>
    <description>Record type for Email to Case functionality</description>
    <label>EmailToCase</label>
</RecordType>