force-app/main/default/objects/Case/recordTypes/Flexiti_CCS_Case.recordType-meta.xml
<RecordType>
    <fullName>Flexiti_CCS_Case</fullName>
    <active>true</active>
    <businessProcess>CCS Cases Process</businessProcess>
    <description>Assignment record type for flexiti</description>
    <label>Flexiti CCS Case</label>
</RecordType>