force-app/main/default/objects/Case/recordTypes/GoEasy_CCS_Case.recordType-meta.xml
<RecordType>
    <fullName>GoEasy_CCS_Case</fullName>
    <active>true</active>
    <businessProcess>CCS Cases Process</businessProcess>
    <description>GoEasy CCS Case</description>
    <label>GoEasy CCS Case</label>
</RecordType>