force-app/main/default/objects/Case/recordTypes/Insolvency_Canadian_Tire_Community_Case.recordType-meta.xml
<RecordType>
    <fullName>Insolvency_Canadian_Tire_Community_Case</fullName>
    <active>true</active>
    <businessProcess>Insolvency Cases Process</businessProcess>
    <description>Used for Canadian Tire Community Case</description>
    <label>Insolvency Canadian Tire Community Case</label>
</RecordType>