force-app/main/default/objects/Case/recordTypes/Insolvency_Case.recordType-meta.xml
<RecordType>
    <fullName>Insolvency_Case</fullName>
    <active>true</active>
    <businessProcess>Insolvency Cases Process</businessProcess>
    <description>Record type for Insolvency Cases</description>
    <label>Insolvency Case</label>
</RecordType>