force-app/main/default/objects/Case/recordTypes/Insolvency_Fairstone_Community_Case.recordType-meta.xml
<RecordType>
    <fullName>Insolvency_Fairstone_Community_Case</fullName>
    <active>true</active>
    <businessProcess>Insolvency Cases Process</businessProcess>
    <description>Used for Fairstone</description>
    <label>Insolvency Fairstone Community Case</label>
</RecordType>