force-app/main/default/objects/Case/recordTypes/Insolvency_Flexiti_Community_Case.recordType-meta.xml
<RecordType>
    <fullName>Insolvency_Flexiti_Community_Case</fullName>
    <active>true</active>
    <businessProcess>Insolvency Cases Process</businessProcess>
    <description>Record type of Flexiti Insolvency case</description>
    <label>Insolvency Flexiti Community Case</label>
</RecordType>