force-app/main/default/objects/Case/recordTypes/Insolvency_Goeasy_Community_Case.recordType-meta.xml
<RecordType>
    <fullName>Insolvency_Goeasy_Community_Case</fullName>
    <active>true</active>
    <businessProcess>Insolvency Cases Process</businessProcess>
    <description>Used for Goessy</description>
    <label>Insolvency Goeasy Community Case</label>
</RecordType>