force-app/main/default/objects/Case/recordTypes/Insolvency_Money_Mart_Community_Case.recordType-meta.xml
<RecordType>
    <fullName>Insolvency_Money_Mart_Community_Case</fullName>
    <active>true</active>
    <businessProcess>Insolvency Cases Process</businessProcess>
    <description>Used Money Mart</description>
    <label>Insolvency Money Mart Community Case</label>
</RecordType>