force-app/main/default/objects/Case/recordTypes/Insolvency_Scotia_Community_Case.recordType-meta.xml
<RecordType>
    <fullName>Insolvency_Scotia_Community_Case</fullName>
    <active>true</active>
    <businessProcess>Insolvency Cases Process</businessProcess>
    <description>Record type used when community user creates  case</description>
    <label>Insolvency Scotia Community Case</label>
</RecordType>