force-app/main/default/objects/Case/recordTypes/Insolvency_SDA_Community_Case.recordType-meta.xml
<RecordType>
    <fullName>Insolvency_SDA_Community_Case</fullName>
    <active>true</active>
    <businessProcess>Insolvency Cases Process</businessProcess>
    <description>Insolvency SDA Community Case</description>
    <label>Insolvency SDA Community Case</label>
</RecordType>