force-app/main/default/objects/Case/recordTypes/Insolvency_SPL_Community_Case.recordType-meta.xml
<RecordType>
    <fullName>Insolvency_SPL_Community_Case</fullName>
    <active>true</active>
    <businessProcess>Insolvency Cases Process</businessProcess>
    <description>Insolvency SPL Community Case</description>
    <label>Insolvency SPL Community Case</label>
</RecordType>