force-app/main/default/objects/Case/recordTypes/Remittance.recordType-meta.xml
<RecordType>
    <fullName>Remittance</fullName>
    <active>true</active>
    <businessProcess>Remittance</businessProcess>
    <description>Remittance</description>
    <label>Remittance</label>
</RecordType>