force-app/main/default/objects/Case/recordTypes/Web_To_Case.recordType-meta.xml
<RecordType>
    <fullName>Web_To_Case</fullName>
    <active>true</active>
    <businessProcess>Remittance</businessProcess>
    <label>Web To Case</label>
</RecordType>