force-app/main/default/objects/Case/validationRules/Assign_To_field_validate_on_CCS.validationRule-meta.xml
<ValidationRule>
    <fullName>Assign_To_field_validate_on_CCS</fullName>
    <active>true</active>
    <description>Assign_To_field_validate</description>
    <errorConditionFormula>AND(CCS_Account__c&lt;&gt;null,ISPICKVAL(Assign_To__c, &apos;Goeasy&apos;),
NOT(CCS_Account__r.RecordType.DeveloperName= &apos;GoEasy_CCS_Account&apos;)
)</errorConditionFormula>
    <errorDisplayField>Assign_To__c</errorDisplayField>
    <errorMessage>Wrong Assign To for given CCS Account</errorMessage>
</ValidationRule>