force-app/main/default/objects/Case/validationRules/CCS_account_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>CCS_account_mandatory</fullName>
    <active>true</active>
    <description>CCS account field mandatory</description>
    <errorConditionFormula>ISBLANK( CCS_Account__c )</errorConditionFormula>
    <errorDisplayField>CCS_Account__c</errorDisplayField>
    <errorMessage>CCS Account is mandatory</errorMessage>
</ValidationRule>