force-app/main/default/objects/Case/validationRules/Next_Follow_Up_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Next_Follow_Up_Date_Validation</fullName>
    <active>true</active>
    <description>Next Follow Up Date can&apos;t be in past</description>
    <errorConditionFormula>AND($User.LastName &lt;&gt; $Label.DataArchiverUser,
(OR(ISNEW(), ISCHANGED(Next_Follow_Up_Date__c)))
,
(AND(NOT(ISNULL(Next_Follow_Up_Date__c)), Next_Follow_Up_Date__c &lt; TODAY()))
)</errorConditionFormula>
    <errorDisplayField>Next_Follow_Up_Date__c</errorDisplayField>
    <errorMessage>Next Follow Up Date can&apos;t be in past</errorMessage>
</ValidationRule>