force-app/main/default/objects/Case/validationRules/Parent_Id_Missing_Validation_Create.validationRule-meta.xml
<ValidationRule>
    <fullName>Parent_Id_Missing_Validation_Create</fullName>
    <active>true</active>
    <description>Both Insolvency or Insolvency Account are missing while record creation</description>
    <errorConditionFormula>AND($User.LastName &lt;&gt; $Label.DataArchiverUser,
AND
(
ISNEW(),
RecordType.Name &lt;&gt; &apos;EmailToCase&apos;,
RecordType.Name &lt;&gt; &apos;Remittance&apos;,
RecordType.Name &lt;&gt; &apos;Canaccede_EmailToCase&apos;,
RecordType.Name &lt;&gt; &apos;Canaccede EmailToCase&apos;,
RecordType.Name &lt;&gt; &apos;CCS Case&apos;,
RecordType.Name &lt;&gt; &apos;CCS Dividend&apos;,
RecordType.Name &lt;&gt; &apos;Web To Case&apos;,
OR(
NOT(ISPICKVAL(Insolvency_Assignment_Type__c, &apos;Business Insolvency&apos;)),
CONTAINS($Profile.Name, &apos;Community&apos;)
),
ISBLANK(Insolvency_Account__c),
ISBLANK(Insolvency__c)
),
AND
(
ISNEW(),
RecordType.Name &lt;&gt; &apos;EmailToCase&apos;,
RecordType.Name &lt;&gt; &apos;Remittance&apos;,
RecordType.Name &lt;&gt; &apos;Canaccede_EmailToCase&apos;,
RecordType.Name &lt;&gt; &apos;Canaccede EmailToCase&apos;,
RecordType.Name &lt;&gt; &apos;CCS Case&apos;,
RecordType.Name &lt;&gt; &apos;CCS Dividend&apos;,
NOT(ISPICKVAL(Insolvency_Assignment_Type__c, &apos;Secured Communications&apos;)),
ISBLANK(Insolvency_Account__c),
ISBLANK(Insolvency__c)
),
AND
(
ISNEW(),
RecordType.Name &lt;&gt; &apos;EmailToCase&apos;,
RecordType.Name &lt;&gt; &apos;Remittance&apos;,
RecordType.Name &lt;&gt; &apos;Canaccede_EmailToCase&apos;,
RecordType.Name &lt;&gt; &apos;Canaccede EmailToCase&apos;,
RecordType.Name &lt;&gt; &apos;CCS Case&apos;,
RecordType.Name &lt;&gt; &apos;CCS Dividend&apos;,
NOT(ISPICKVAL(Insolvency_Assignment_Type__c, &apos;Final&apos;)),
ISBLANK(Insolvency_Account__c),
ISBLANK(Insolvency__c)
)
)</errorConditionFormula>
    <errorMessage>Please select Insolvency or Insolvency Account</errorMessage>
</ValidationRule>