force-app/main/default/objects/Case/validationRules/SPL_not_have_vehicles_attached_Create.validationRule-meta.xml
<ValidationRule>
    <fullName>SPL_not_have_vehicles_attached_Create</fullName>
    <active>true</active>
    <description>SPL accounts should not have vehicles attached.</description>
    <errorConditionFormula>AND($User.LastName &lt;&gt; $Label.DataArchiverUser,
ISNEW(),
AND(
ISPICKVAL(Insolvency_Assignment_Type__c,&apos;Vehicle Pickup Request&apos;),
OR(
ISPICKVAL(Assign_To__c, &apos;SPL&apos;),
ISPICKVAL(Insolvency_Account__r.Client_Identifier__c,&apos;SPL&apos;)
)
)
)</errorConditionFormula>
    <errorMessage>You cannot assign Vehicle Pickup Request for SPL.</errorMessage>
</ValidationRule>