force-app/main/default/objects/Case/listViews/Canadian_Tire_Open_Assignments.listView-meta.xml
<ListView>
    <fullName>Canadian_Tire_Open_Assignments</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Completed,Closed</value>
    </filters>
    <filters>
        <field>Assign_To__c</field>
        <operation>equals</operation>
        <value>Canadian Tire</value>
    </filters>
    <filters>
        <field>Insolvency_Assignment_Type__c</field>
        <operation>notEqual</operation>
        <value>Final,OSB Request</value>
    </filters>
    <label>Canadian Tire Open Assignments</label>
    <sharedTo>
        <group>Insolvency_Canadian_Tire_Users</group>
    </sharedTo>
</ListView>