force-app/main/default/objects/Case/listViews/Fairstone_Final.listView-meta.xml
<ListView>
    <fullName>Fairstone_Final</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Account_Number__c</columns>
    <columns>Insolvency__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Number_Of_Days_Since_Last_Updated__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Next_Follow_Up_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Insolvency_Assignment_Type__c</field>
        <operation>equals</operation>
        <value>Final</value>
    </filters>
    <filters>
        <field>Record_Visible_in_List_View__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CASES.ORIGIN</field>
        <operation>notEqual</operation>
        <value>Canaccede Email</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>Assign_To__c</field>
        <operation>notEqual</operation>
        <value>CFG,Fairstone</value>
    </filters>
    <label>Fairstone - 09. Final</label>
    <sharedTo>
        <group>Insolvency_CFG_BS</group>
        <group>Insolvency_CFG_Users</group>
        <group>New_fairstone_users_access</group>
    </sharedTo>
</ListView>